--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -1,13 +1,13 @@
+schema_version = "1.0.0"
+
 id = "addroutes"
 version = "0.1.0"
 name = "AddRoutes"
-author = "JPfeP"
+tagline = "Allow MIDI, OSC and a remote Android App to control Blender 4.2"
+maintainer = "JPfeP"
+type = "add-on"
+
 blender_version_min = "4.2.0"
-description = "Allow MIDI, OSC and a remote Android App to control Blender 4.2"
-warning = ""
-doc_url = ""
-tracker_url = ""
-category = "System"
 
 license = [
     "SPDX:GPL-2.0-or-later",
@@ -19,7 +19,11 @@ wheels = [
     "./wheels/mido-1.3.3-py3-none-any.whl",
     "./wheels/oscpy-0.6.0-py2.py3-none-any.whl",
     "./wheels/packaging-24.2-py3-none-any.whl",
+    "./wheels/ifaddr-0.2.0-py3-none-any.whl",
     "./wheels/python_rtmidi-1.5.8-cp311-cp311-macosx_11_0_arm64.whl",
     "./wheels/python_rtmidi-1.5.8-cp311-cp311-manylinux_2_28_x86_64.whl",
     "./wheels/python_rtmidi-1.5.8-cp311-cp311-win_amd64.whl"
 ]
+
+[permissions]
+network = "Required for OSC communication"
